--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,17 +1,58 @@
-@import "variables.css";
 @import "normalize.css";
-@import "font.css";
 @import "reset.css";
 
 :root {
+	--category-blue: #4477AA;
+	--category-red: #EE6677;
+	--category-green: #228833;
+	--category-yellow: #CCBB44;
+	--category-cyan: #66CCEE;
+	--category-purple: #AA3377;
+	--category-gray: #BBBBBB;
+	--color-black: #000000;
+	--color-white: #ffffff;
+	--color-gray-50: #f7f7f7;
+	--color-gray-100: #efefef;
+	--color-gray-200: #dfdfdf;
+	--color-gray-300: #cacaca;
+	--color-gray-400: #a8a8a8;
+	--color-gray-500: #878787;
+	--color-gray-600: #6d6d6d;
+	--color-gray-700: #4e4e4e;
+	--color-gray-800: #373737;
+	--color-gray-900: #262626;
+	--color-gray-1000: #191919;
+	--color-purple: #a239ca;
+	--color-blue: #4717f6;
+	--color-green: #34a29e;
+	--color-red: #ff533d;
+	--color-yellow: #e5e338;
+	--12px: 0.75rem;
+	--14px: 0.875rem;
+	--16px: 1rem;
+	--18px: 1.125rem;
+	--20px: 1.25rem;
+	--22px: 1.375rem;
+	--24px: 1.5rem;
+	--28px: 1.75rem;
+	--32px: 2rem;
+	--36px: 2.25rem;
+	--40px: 2.5rem;
+	--44px: 2.75rem;
+	--48px: 3rem;
+	--56px: 3.5rem;
+	--64px: 4rem;
+	--80px: 5rem;
+	--96px: 6rem;
+	--112px: 7rem;
+	--128px: 8rem;
+  }
 
-	/* z-index */
+:root {
 	--z-bottom: -100;
 	--z-middle: 0;
 	--z-top: 100;
 	--z-overlay: 1000;
-
-	/* presets (used in reset.css) */
 	--border-radius: 2px;
 	--font-body: var(--serif);
 	--font-form: var(--sans);
@@ -28,11 +69,8 @@
 	--color-input-bg: var(--color-gray-50);
 	--color-input-fg: var(--color-gray-900);
 	--color-placeholder: var(--color-gray-500);
-
 	--1s: 1ms;
 }
-
-
 
 @media screen and (prefers-reduced-motion: no-preference) {
 	:root {
@@ -41,25 +79,20 @@
 }
 
 h1 {
-	font-size: var(--48px, 48px);
+	font-size: var(--56px, 56px);
 }
-
 h2 {
 	font-size: var(--36px, 36px);
 }
-
 h3 {
 	font-size: var(--28px, 28px);
 }
-
 h4 {
 	font-size: var(--24px, 24px);
 }
-
 h5 {
 	font-size: var(--22px, 22px);
 }
-
 h6 {
 	font-size: var(--20px, 20px);
 }
