--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -1,6 +1,6 @@
 
 body {
-	background-color: #0F0140;
+	background-color: var(--color-background);
 	color: #D5F2F2;
 	line-height: 1.6;
 	font-feature-settings: 'kern' 1, 'onum' 0, 'liga' 0, 'tnum' 1;
