--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -78,6 +78,7 @@
 :root {
 	--chart-lowlight: #263973;
 	--chart-color-lowlight: #6e7496;
+	--chart-color-highlight: rgba(255, 255, 255, 0.7);
 }
 
 @media screen and (prefers-reduced-motion: no-preference) {
