style of highlighted text

--- a/src/styles/normalize.css
+++ b/src/styles/normalize.css
@@ -41,11 +41,11 @@ main {
  * 2. Show the overflow in Edge and IE.
  */
 
-hr {
-  box-sizing: content-box; /* 1 */
-  height: 0; /* 1 */
-  overflow: visible; /* 2 */
-}
+/* hr {
+  box-sizing: content-box; 
+  height: 10; 
+  overflow: visible; 
+} */
 
 /**
  * 1. Correct the inheritance and scaling of font size in all browsers.
