--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,31 +1,9 @@
-@import "normalize.css";
+/* @import "normalize.css"; */
 @import "reset.css";
 @import "fonts.css";
 
 :root {
 	--color-background:#020100ff;
-
-
-
-	--12px: 0.75rem;
-	--14px: 0.875rem;
-	--16px: 1rem;
-	--18px: 1.125rem;
-	--20px: 1.25rem;
-	--22px: 1.375rem;
-	--24px: 1.5rem;
-	--28px: 1.75rem;
-	--32px: 2rem;
-	--36px: 2.25rem;
-	--40px: 2.5rem;
-	--44px: 2.75rem;
-	--48px: 3rem;
-	--56px: 3.5rem;
-	--64px: 4rem;
-	--80px: 5rem;
-	--96px: 6rem;
-	--112px: 7rem;
-	--128px: 8rem;
 }
 
 :root {
@@ -36,28 +14,9 @@
 	--border-radius: 2px;
 	--font-body: var(--serif);
 	--font-form: var(--sans);
-	--color-fg: var(--color-gray-900);
-	--color-primary: var(--color-black);
-	--color-link: var(--color-black);
-	--color-focus: var(--color-red);
-	--color-mark: var(--color-yellow);
-	--color-selection: var(--color-gray-300);
-	--color-border: var(--color-gray-300);
-	--color-button-bg: var(--color-gray-300);
-	--color-button-fg: var(--color-gray-900);
-	--color-button-hover: var(--color-gray-400);
-	--color-input-bg: var(--color-gray-50);
-	--color-input-fg: var(--color-gray-900);
-	--color-placeholder: var(--color-gray-500);
 	--1s: 1ms;
 }
 
-/* chart styling */
-:root {
-	--chart-lowlight: #263973;
-	--chart-color-lowlight: #6e7496;
-	--chart-color-highlight: rgba(255, 255, 255, 0.7);
-}
 
 @media screen and (prefers-reduced-motion: no-preference) {
 	:root {
