--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -199,9 +199,9 @@ select {
   padding-right: 2.5rem;
 
   background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg aria-hidden='true' xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 10 6'%3E%3Cpath stroke='%236B7280' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='m1 1 4 4 4-4'/%3E%3C/svg%3E");
-  background-position: right .75rem center;
+  background-position: right 0.75rem center;
   background-repeat: no-repeat;
-  background-size: .75em .75em;
+  background-size: 0.75em 0.75em;
   padding-right: 2.5rem;
   -webkit-print-color-adjust: exact;
   print-color-adjust: exact;
@@ -250,7 +250,8 @@ ul {
   --stroke-width: 1px;
   --stroke-width-n: calc(var(--stroke-width) * -1);
   text-shadow:
-    var(--stroke-width-n) var(--stroke-width-n) 0 var(--color-text-outline, #fff),
+    var(--stroke-width-n) var(--stroke-width-n) 0
+      var(--color-text-outline, #fff),
     0 var(--stroke-width-n) 0 var(--color-text-outline, #fff),
     var(--stroke-width) var(--stroke-width-n) 0 var(--color-text-outline, #fff),
     var(--stroke-width) 0 0 var(--color-text-outline, #fff),
@@ -262,7 +263,6 @@ ul {
 
 /* desktop (mouse-enabled device) */
 @media (hover: hover) and (pointer: fine) {
-
   button:hover,
   a[role="button"]:hover,
   input[type="button"]:hover,
