--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -38,7 +38,27 @@
   --font-size-md: 1rem;
   --font-size-sm: 0.8rem;
   --font-size-xs: 0.7rem;
+}
 
+/* colors */
+:root {
+  --jordy-blue: #99b9f8ff;
+  --cornflower-blue: #7190feff;
+  --caribbean-current: #226566ff;
+  --brunswick-green: #224e3bff;
+  --chefchaouen-blue: #4c8ffeff;
+  --night: #081604ff;
+  --cerulean: #247285ff;
+  --pakistan-green: #113c1eff;
+  --hot-pink: #fe5dbaff;
+  --lavender-pink: #f9acdbff;
+  --dark-green: #022121ff;
+  --sky-magenta: #c35bacff;
+  --black: #020909ff;
+  --hot-pink-2: #ff6db7ff;
+  --persian-pink: #fc7ec2ff;
+  --charcoal: #213d4fff;
+  --english-violet: #4a496aff;
 }
 
 @media screen and (prefers-reduced-motion: no-preference) {
