--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -14,15 +14,15 @@ main {
   font-family: "Montserrat Alternates2", sans-serif;
   hyphens: auto;
   line-height: 1.15;
-  text-align: justify;
+  text-align: left;
 }
 
 .text-medium {
   font-family: "Montserrat Alternates2", sans-serif;
   font-size: var(--font-size-md);
-  line-height: 1.15;
+  line-height: 1.6;
   hyphens: auto;
-  text-align: justify;
+  text-align: left;
 }
 
 .text-small {
@@ -31,7 +31,7 @@ main {
   margin-bottom: 4px;
   line-height: 1.15;
   hyphens: auto;
-  text-align: justify;
+  text-align: left;
 }
 
 a {
@@ -61,10 +61,6 @@ a {
   --base-max-font-size: 1.125rem;
   --base-min-line-height: 1.125rem;
   --base-max-line-height: 1.463rem;
-
-  /* font families */
-  --font-family-impact: "Syncopate", sans-serif;
-  --font-family-base: "Montserrat Alternates", sans-serif;
 
   /* font sizes */
   --font-size-xl: 6rem;
