--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -19,13 +19,14 @@ a {
 .text-big {
   font-family: "Montserrat Alternates2", sans-serif;
   hyphens: auto;
+  font-size: var(--step-1);
   line-height: 1.15;
   text-align: left;
 }
 
 .text-medium {
   font-family: "Montserrat Alternates2", sans-serif;
-  font-size: var(--font-size-md);
+  font-size: var(--step--1);
   line-height: 1.6;
   hyphens: auto;
   text-align: left;
@@ -33,9 +34,9 @@ a {
 
 .text-small {
   font-family: "Montserrat Alternates1", sans-serif;
-  font-size: var(--font-size-sm);
+  font-size: var(--step--2);
   margin-bottom: 4px;
-  line-height: 1.15;
+  line-height: 1.4;
   hyphens: auto;
   text-align: left;
 }
