--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -98,102 +98,68 @@ a {
 /*--------------------------------------*/
 
 @media screen and (max-width: 1400px) {
-
   .text-big {
       font-size: var(--step-1); 
     }
-
   .text-medium {
       font-size: var(--step--1); 
     }
-
   .text-small {
       font-size: var(--step--2); 
-    }
+    }    
+}
     
+@media screen and (max-width: 780px) {    
+.text-big {
+    font-size: var(--step-1); 
   }
+.text-medium {
+    font-size: var(--step--1); 
+  }
+.text-small {
+    font-size: var(--step--2); 
+  }   
+}
     
-@media screen and (max-width: 780px) {
+@media screen and (max-width: 600px) {    
+.text-big {
+    font-size: var(--step-1); 
+  }
+.text-medium {
+    font-size: var(--step--1); 
+  }
+.text-small {
+    font-size: var(--step--2); 
+  }   
+}
     
+@media screen and (max-width: 480px) {   
   .text-big {
       font-size: var(--step-0); 
     }
-
   .text-medium {
       font-size: var(--step--2); 
     }
-
   .text-small {
       font-size: var(--step--3); 
-    }
-    
-  }
-    
-@media screen and (max-width: 600px) {
-    
-  .text-big {
-      font-size: var(--step--1); 
-    }
-
-  .text-medium {
-      font-size: var(--step--3); 
-    }
-
-  .text-small {
-      font-size: var(--step--4); 
-    }
-    
-  }
-    
-@media screen and (max-width: 480px) {
-    
-  .text-big {
-      font-size: var(--step--2); 
-    }
-
-  .text-medium {
-      font-size: var(--step--4); 
-    }
-
-  .text-small {
-      font-size: var(--step--5); 
-    }
-    
-  }
-  
-@media screen and (max-width: 380px) {
-    
-  .text-big {
-      font-size: var(--step-2); 
-    }
-
-  .text-medium {
-      font-size: var(--step--4); 
-    }
-
-  .text-small {
-      font-size: var(--step--5); 
-    }
-    
-  }
-
-
-
-
-/* typography */
-:root {
-  /* fluid base */
-  --base-min-font-size: 0.75rem;
-  --base-max-font-size: 1.125rem;
-  --base-min-line-height: 1.125rem;
-  --base-max-line-height: 1.463rem;
-  /* font sizes */
-  --font-size-xl: 6rem;
-  --font-size-lg: 2rem;
-  --font-size-md: 1rem;
-  --font-size-sm: 0.8rem;
-  --font-size-xs: 0.7rem;
+    }   
 }
+  
+@media screen and (max-width: 380px) {    
+  .text-big {
+      font-size: var(--step-0); 
+    }
+  .text-medium {
+      font-size: var(--step--2); 
+    }
+  .text-small {
+      font-size: var(--step--3); 
+    }    
+}
+
+/*--------------------------------------*/
+/* Root */
+/*--------------------------------------*/
 
 :root {
   --z-bottom: -100;
