--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -70,6 +70,7 @@ a {
 
 .text-big {
   font-family: "Montserrat Alternates2", sans-serif;
+  color: var(--color-chart-axis);
   hyphens: auto;
   font-size: var(--step-1);
   line-height: 1.15;
@@ -78,6 +79,7 @@ a {
 
 .text-medium {
   font-family: "Montserrat Alternates2", sans-serif;
+  color: var(--color-chart-axis);
   font-size: var(--step--1);
   line-height: 1.6;
   hyphens: auto;
@@ -86,6 +88,7 @@ a {
 
 .text-small {
   font-family: "Montserrat Alternates1", sans-serif;
+  color: var(--color-chart-axis);
   font-size: var(--step--2);
   margin-bottom: 4px;
   line-height: 1.4;
@@ -147,13 +150,13 @@ a {
   
 @media screen and (max-width: 380px) {    
   .text-big {
-      font-size: var(--step-0); 
+      font-size: var(--step--1); 
     }
   .text-medium {
-      font-size: var(--step--2); 
+      font-size: var(--step--3); 
     }
   .text-small {
-      font-size: var(--step--3); 
+      font-size: var(--step--4); 
     }    
 }
 
