feat: readme and font on annotation and axis

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -2,7 +2,10 @@
 @import "reset.css";
 @import "fonts.css";
 
-/* general */
+/*--------------------------------------*/
+/* General */
+/*--------------------------------------*/
+
 body {
   margin: 0;
 }
