--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -15,8 +15,17 @@ main {
 }
 
 a {
-  color: #d5f2f2;
+	text-decoration: none;
+	color: var(--color-link);
+	outline: none;
 }
+
+a:hover,
+a:focus {
+	color: var(--color-link-hover);
+  outline: none;
+}
+
 
 /*--------------------------------------*/
 /* Colour */
@@ -29,7 +38,7 @@ a {
   --cornflower-blue: #7190feff;
   --caribbean-current: #226566ff;
   --brunswick-green: #224e3bff;
-  --chefchaouen-blue: #4c8ffeff;
+  --color-link-hover: #4c8ffeff;
   --night: #081604ff;
   --cerulean: #247285ff;
   --pakistan-green: #113c1eff;
@@ -90,11 +99,11 @@ a {
 }
 
 .text-small {
-  font-family: "Montserrat Alternates1", sans-serif;
+  font-family: "Montserrat Alternates2", sans-serif;
   color: var(--color-chart-axis);
-  font-size: var(--step--2);
-  margin-bottom: 4px;
-  line-height: 1.4;
+  font-size: var(--step--3);
+  margin-bottom: 5px;
+  line-height: 1.6;
   hyphens: auto;
   text-align: left;
 }
@@ -111,7 +120,7 @@ a {
       font-size: var(--step--1); 
     }
   .text-small {
-      font-size: var(--step--2); 
+      font-size: var(--step--3); 
     }    
 }
     
@@ -123,7 +132,7 @@ a {
     font-size: var(--step--1); 
   }
 .text-small {
-    font-size: var(--step--2); 
+    font-size: var(--step--3); 
   }   
 }
     
@@ -135,7 +144,7 @@ a {
     font-size: var(--step--1); 
   }
 .text-small {
-    font-size: var(--step--2); 
+    font-size: var(--step--3); 
   }   
 }
     
@@ -147,7 +156,7 @@ a {
       font-size: var(--step--2); 
     }
   .text-small {
-      font-size: var(--step--3); 
+      font-size: var(--step--4); 
     }   
 }
   
@@ -159,7 +168,7 @@ a {
       font-size: var(--step--3); 
     }
   .text-small {
-      font-size: var(--step--4); 
+      font-size: var(--step--5); 
     }    
 }
 
