update all annotations in multi and difference chart

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -36,8 +36,8 @@ a:focus {
   --color-chart-axis: #b9d4d3;
   --color-global: #d5f2f2; 
   --color-europe:  #0CBFF5; 
-  --color-usa: #f7f154 ; 
-  --color-asia:#ff9130 ; 
+  --color-usa: #CFFF04 ; 
+  --color-asia: #ff9130 ; 
   --color-south-america:#ff00c4 ;
   --color-africa:#99F75E ; 
   --color-link-hover: #4c8ffe; 
