--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -48,6 +48,10 @@ a:focus {
 /*--------------------------------------*/
 
 :root {
+  --step--10: clamp(0.1342rem, 0.1982rem + -0.0826vw, 0.1817rem);
+  --step--9: clamp(0.1678rem, 0.2355rem + -0.0874vw, 0.218rem);
+  --step--8: clamp(0.2097rem, 0.2797rem + -0.0903vw, 0.2616rem);
+  --step--7: clamp(0.2621rem, 0.332rem + -0.0901vw, 0.314rem);
   --step--6: clamp(0.3277rem, 0.3938rem + -0.0854vw, 0.3768rem);
   --step--5: clamp(0.4096rem, 0.4669rem + -0.0739vw, 0.4521rem);
   --step--4: clamp(0.512rem, 0.5532rem + -0.0531vw, 0.5425rem);
@@ -64,26 +68,27 @@ a:focus {
   --step-7: clamp(4.0311rem, 3.36rem + 3.3555vw, 5.9605rem);
   --step-8: clamp(4.8373rem, 3.9283rem + 4.5448vw, 7.4506rem);
   --step-9: clamp(5.8048rem, 4.5844rem + 6.1017vw, 9.3132rem);
+  --step-10: clamp(6.9657rem, 5.3393rem + 8.1319vw, 11.6415rem);
 }
 
 /*--------------------------------------*/
 /* Text versions */
 /*--------------------------------------*/
 
-.text-big {
+/* .text-big {
   font-family: "Montserrat Alternates2", sans-serif;
   color: var(--color-chart-axis);
   hyphens: auto;
-  font-size: var(--step-1);
+  font-size: var(--step-4);
   line-height: 1.15;
   text-align: left;
-}
+} */
 
 .text-medium {
   font-family: "Montserrat Alternates2", sans-serif;
   color: var(--color-chart-axis);
-  font-size: var(--step--1);
-  line-height: 1.6;
+  font-size: var(--step-0);
+  line-height: 1.4;
   hyphens: auto;
   text-align: left;
 }
@@ -91,9 +96,9 @@ a:focus {
 .text-small {
   font-family: "Montserrat Alternates2", sans-serif;
   color: var(--color-chart-axis);
-  font-size: var(--step--3);
+  font-size: var(--step--2);
   margin-bottom: 5px;
-  line-height: 1.6;
+  line-height: 1.4;
   hyphens: auto;
   text-align: left;
 }
@@ -126,6 +131,8 @@ a:focus {
 /* Screen stylings */
 /*--------------------------------------*/
 
+/*1400*/
+
 @media screen and (max-width: 1400px) {
   .text-big {
       font-size: var(--step-1); 
@@ -137,6 +144,8 @@ a:focus {
       font-size: var(--step--3); 
     }    
 }
+
+/*1400*/
     
 @media screen and (max-width: 780px) {    
 .text-big {
@@ -149,40 +158,46 @@ a:focus {
     font-size: var(--step--4); 
   }   
 }
+
+/*1400*/
     
 @media screen and (max-width: 600px) {    
 .text-big {
     font-size: var(--step-0); 
   }
 .text-medium {
-    font-size: var(--step--2); 
+    font-size: var(--step--3); 
   }
 .text-small {
-    font-size: var(--step--4); 
+    font-size: var(--step--5); 
   }   
 }
+
+/* < 480 */
     
 @media screen and (max-width: 480px) {   
   .text-big {
       font-size: var(--step-0); 
     }
   .text-medium {
-      font-size: var(--step--2); 
+      font-size: var(--step--3); 
     }
   .text-small {
-      font-size: var(--step--4); 
+      font-size: var(--step--6); 
     }   
 }
+
+/* < 380 */
   
 @media screen and (max-width: 380px) {    
   .text-big {
       font-size: var(--step--1); 
     }
   .text-medium {
-      font-size: var(--step--3); 
+      font-size: var(--step--4); 
     }
   .text-small {
-      font-size: var(--step--5); 
+      font-size: var(--step--8); 
     }    
 }
 
