--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -87,8 +87,8 @@ a:focus {
 .text-medium {
   font-family: "Montserrat Alternates2", sans-serif;
   color: var(--color-chart-axis);
-  font-size: var(--step-0);
-  line-height: 1.4;
+  font-size: var(--step--1);
+  line-height: 1.7;
   hyphens: auto;
   text-align: left;
 }
