--- a/src/styles/normalize.css
+++ b/src/styles/normalize.css
@@ -1,5 +1,49 @@
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 
+/* Document
+   ========================================================================== */
+
+/**
+ * 1. Correct the line height in all browsers.
+ * 2. Prevent adjustments of font size after orientation changes in iOS.
+ */
+
+ html {
+  line-height: 1.15; /* 1 */
+  -webkit-text-size-adjust: 100%; /* 2 */
+  /* This lets us expand into the safe area on iOS (left/right margins on mobile), which is fine cuz we have our own margins & not a lot space */
+  padding: env(safe-area-inset); 
+}
+
+/* Sections
+   ========================================================================== */
+
+/**
+ * Remove the margin in all browsers.
+ */
+
+body {
+  margin: 0;
+}
+
+/**
+ * Render the `main` element consistently in IE.
+ */
+
+main {
+  display: block;
+}
+
+/**
+ * Correct the font size and margin on `h1` elements within `section` and
+ * `article` contexts in Chrome, Firefox, and Safari.
+ */
+
+h1 {
+  font-size: 2em;
+  margin: 0.67em 0;
+}
+
 /* Grouping content
    ========================================================================== */
 
@@ -8,11 +52,11 @@
  * 2. Show the overflow in Edge and IE.
  */
 
-/* hr {
-  box-sizing: content-box; 
-  height: 10; 
-  overflow: visible; 
-} */
+hr {
+  box-sizing: content-box; /* 1 */
+  height: 0; /* 1 */
+  overflow: visible; /* 2 */
+}
 
 /**
  * 1. Correct the inheritance and scaling of font size in all browsers.
@@ -20,10 +64,8 @@
  */
 
 pre {
-  font-family: monospace, monospace;
-  /* 1 */
-  font-size: 1em;
-  /* 2 */
+  font-family: monospace, monospace; /* 1 */
+  font-size: 1em; /* 2 */
 }
 
 /* Text-level semantics
@@ -43,12 +85,9 @@ a {
  */
 
 abbr[title] {
-  border-bottom: none;
-  /* 1 */
-  text-decoration: underline;
-  /* 2 */
-  text-decoration: underline dotted;
-  /* 2 */
+  border-bottom: none; /* 1 */
+  text-decoration: underline; /* 2 */
+  text-decoration: underline dotted; /* 2 */
 }
 
 /**
@@ -68,10 +107,8 @@ strong {
 code,
 kbd,
 samp {
-  font-family: monospace, monospace;
-  /* 1 */
-  font-size: 1em;
-  /* 2 */
+  font-family: monospace, monospace; /* 1 */
+  font-size: 1em; /* 2 */
 }
 
 /**
@@ -96,11 +133,11 @@ sup {
 }
 
 sub {
-  bottom: -0.25rem;
+  bottom: -0.25em;
 }
 
 sup {
-  top: -0.5rem;
+  top: -0.5em;
 }
 
 /* Embedded content
@@ -127,14 +164,10 @@ input,
 optgroup,
 select,
 textarea {
-  font-family: inherit;
-  /* 1 */
-  font-size: 100%;
-  /* 1 */
-  line-height: 1.15;
-  /* 1 */
-  margin: 0;
-  /* 2 */
+  font-family: inherit; /* 1 */
+  font-size: 100%; /* 1 */
+  line-height: 1.15; /* 1 */
+  margin: 0; /* 2 */
 }
 
 /**
@@ -143,8 +176,7 @@ textarea {
  */
 
 button,
-input {
-  /* 1 */
+input { /* 1 */
   overflow: visible;
 }
 
@@ -154,8 +186,7 @@ input {
  */
 
 button,
-select {
-  /* 1 */
+select { /* 1 */
   text-transform: none;
 }
 
@@ -198,7 +229,7 @@ button:-moz-focusring,
  */
 
 fieldset {
-  padding: 0.35rem 0.75rem 0.625rem;
+  padding: 0.35em 0.75em 0.625em;
 }
 
 /**
@@ -209,18 +240,12 @@ fieldset {
  */
 
 legend {
-  box-sizing: border-box;
-  /* 1 */
-  color: inherit;
-  /* 2 */
-  display: table;
-  /* 1 */
-  max-width: 100%;
-  /* 1 */
-  padding: 0;
-  /* 3 */
-  white-space: normal;
-  /* 1 */
+  box-sizing: border-box; /* 1 */
+  color: inherit; /* 2 */
+  display: table; /* 1 */
+  max-width: 100%; /* 1 */
+  padding: 0; /* 3 */
+  white-space: normal; /* 1 */
 }
 
 /**
@@ -246,10 +271,8 @@ textarea {
 
 [type="checkbox"],
 [type="radio"] {
-  box-sizing: border-box;
-  /* 1 */
-  padding: 0;
-  /* 2 */
+  box-sizing: border-box; /* 1 */
+  padding: 0; /* 2 */
 }
 
 /**
@@ -267,10 +290,8 @@ textarea {
  */
 
 [type="search"] {
-  -webkit-appearance: textfield;
-  /* 1 */
-  outline-offset: -2px;
-  /* 2 */
+  -webkit-appearance: textfield; /* 1 */
+  outline-offset: -2px; /* 2 */
 }
 
 /**
@@ -287,10 +308,8 @@ textarea {
  */
 
 ::-webkit-file-upload-button {
-  -webkit-appearance: button;
-  /* 1 */
-  font: inherit;
-  /* 2 */
+  -webkit-appearance: button; /* 1 */
+  font: inherit; /* 2 */
 }
 
 /* Interactive
@@ -331,6 +350,8 @@ template {
   display: none;
 }
 
+
+
 /*! https://github.com/a11yproject/a11yproject.com/blob/main/src/css/base/_resets.scss */
 *,
 *::before,
@@ -343,32 +364,34 @@ template {
 
 /* Removes borders from linked images */
 a img {
-  border: none;
+	border: none; 
 }
+
 
 b,
 strong {
-  font-weight: 700;
+	font-weight: 700;
 }
 
 button,
 input[type="button"] {
-  border: 0;
+	border: 0;
 }
+
 
 em,
 cite,
 i {
-  font-style: italic;
+	font-style: italic;
 }
 
 img,
 figure,
 picture {
-  border: 0;
-  display: block;
-  height: auto;
-  max-width: 100%;
+	border: 0;
+	display: block;
+	height: auto;
+	max-width: 100%;
 }
 
 h1,
@@ -377,21 +400,21 @@ h3,
 h4,
 h5,
 h6 {
-  font-weight: 500;
+	font-weight: 500;
 }
 
 sub {
-  text-transform: lowercase;
-  font-size: inherit;
-  font-variant-position: sub;
+	text-transform: lowercase;
+	font-size: inherit;
+	font-variant-position: sub;
 }
 
 sup {
-  text-transform: lowercase;
-  font-variant-position: super;
+	text-transform: lowercase;
+	font-variant-position: super;
 }
 
 textarea {
-  overflow: auto;
-  resize: vertical;
+	overflow: auto;
+	resize: vertical;
 }
