--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -144,11 +144,11 @@ a:focus {
   }
 
   .text-medium {
-    font-size: var(--step--1);
+    font-size: var(--step-1);
   }
 
   .text-small {
-    font-size: var(--step--3);
+    font-size: var(--step-0);
   }
 }
 
@@ -160,11 +160,11 @@ a:focus {
   }
 
   .text-medium {
-    font-size: var(--step--3);
+    font-size: var(--step-1);
   }
 
   .text-small {
-    font-size: var(--step--4);
+    font-size: var(--step-0);
   }
 }
 
@@ -176,11 +176,11 @@ a:focus {
   }
 
   .text-medium {
-    font-size: var(--step--3);
+    font-size: var(--step-1);
   }
 
   .text-small {
-    font-size: var(--step--5);
+    font-size: var(--step-0);
   }
 }
 
@@ -192,11 +192,11 @@ a:focus {
   }
 
   .text-medium {
-    font-size: var(--step--3);
+    font-size: var(--step-1);
   }
 
   .text-small {
-    font-size: var(--step--6);
+    font-size: var(--step-0);
   }
 }
 
@@ -208,11 +208,11 @@ a:focus {
   }
 
   .text-medium {
-    font-size: var(--step--4);
+    font-size: var(--step-1);
   }
 
   .text-small {
-    font-size: var(--step--6);
+    font-size: var(--step-0);
   }
 }
 
