--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -37,7 +37,8 @@ a:focus {
 /*--------------------------------------*/
 
 :root {
-  --color-background: black;
+  --color-background:black;
+  --color-background2:#1E1E1E;
   --color-chart-axis: #b9d4d3;
   --color-global: #d5f2f2;
   --color-europe: #0CBFF5;
@@ -91,17 +92,17 @@ a:focus {
 
 .text-medium {
   font-family: "Montserrat Alternates2", sans-serif;
-  color: var(--color-chart-axis);
-  font-size: var(--step--1);
-  line-height: 1.7;
+  color: var(--color-global);
+  font-size: var(--step-0);
+  line-height: 1.6;
   hyphens: auto;
   text-align: left;
 }
 
 .text-small {
   font-family: "Montserrat Alternates2", sans-serif;
-  color: var(--color-chart-axis);
-  font-size: var(--step--2);
+  color: var(--color-global);
+  font-size: var(--step--1);
   margin-bottom: 5px;
   line-height: 1.4;
   hyphens: auto;
@@ -126,7 +127,7 @@ a:focus {
 }
 
 .highlight {
-  background: #020100;
+  background: var(--color-background2);
   font-family: Montserrat Alternates3;
   padding: 3px 3px 3px 3px;
   margin: 2px 2px;
