--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -22,7 +22,7 @@ main {
 a {
   color: var(--color-link);
   outline: none;
-  text-decoration-line: underline;
+  text-decoration-line: none;
   text-decoration-thickness: 0.2px;
 }
 
@@ -50,34 +50,6 @@ a:focus {
 }
 
 /*--------------------------------------*/
-/* Font stylings */
-/*--------------------------------------*/
-
-:root {
-  --step--10: clamp(0.1342rem, 0.1982rem + -0.0826vw, 0.1817rem);
-  --step--9: clamp(0.1678rem, 0.2355rem + -0.0874vw, 0.218rem);
-  --step--8: clamp(0.2097rem, 0.2797rem + -0.0903vw, 0.2616rem);
-  --step--7: clamp(0.2621rem, 0.332rem + -0.0901vw, 0.314rem);
-  --step--6: clamp(0.3277rem, 0.3938rem + -0.0854vw, 0.3768rem);
-  --step--5: clamp(0.4096rem, 0.4669rem + -0.0739vw, 0.4521rem);
-  --step--4: clamp(0.512rem, 0.5532rem + -0.0531vw, 0.5425rem);
-  --step--3: clamp(0.64rem, 0.6549rem + -0.0192vw, 0.651rem);
-  --step--2: clamp(0.7813rem, 0.7747rem + 0.0326vw, 0.8rem);
-  --step--1: clamp(0.9375rem, 0.9158rem + 0.1087vw, 1rem);
-  --step-0: clamp(1.125rem, 1.0815rem + 0.2174vw, 1.25rem);
-  --step-1: clamp(1.35rem, 1.2761rem + 0.3696vw, 1.5625rem);
-  --step-2: clamp(1.62rem, 1.5041rem + 0.5793vw, 1.9531rem);
-  --step-3: clamp(1.944rem, 1.771rem + 0.8651vw, 2.4414rem);
-  --step-4: clamp(2.3328rem, 2.0827rem + 1.2504vw, 3.0518rem);
-  --step-5: clamp(2.7994rem, 2.4462rem + 1.7658vw, 3.8147rem);
-  --step-6: clamp(3.3592rem, 2.8691rem + 2.4507vw, 4.7684rem);
-  --step-7: clamp(4.0311rem, 3.36rem + 3.3555vw, 5.9605rem);
-  --step-8: clamp(4.8373rem, 3.9283rem + 4.5448vw, 7.4506rem);
-  --step-9: clamp(5.8048rem, 4.5844rem + 6.1017vw, 9.3132rem);
-  --step-10: clamp(6.9657rem, 5.3393rem + 8.1319vw, 11.6415rem);
-}
-
-/*--------------------------------------*/
 /* Text versions */
 /*--------------------------------------*/
 
@@ -85,7 +57,7 @@ a:focus {
   font-family: "Montserrat Alternates2", sans-serif;
   color: var(--color-chart-axis);
   hyphens: auto;
-  font-size: var(--step-1);
+  font-size: 30px;
   line-height: 1.15;
   text-align: left;
 }
@@ -93,7 +65,7 @@ a:focus {
 .text-medium {
   font-family: "Montserrat Alternates2", sans-serif;
   color: var(--color-global);
-  font-size: var(--step-0);
+  font-size: 22px;
   line-height: 1.6;
   hyphens: auto;
   text-align: left;
@@ -102,7 +74,7 @@ a:focus {
 .text-small {
   font-family: "Montserrat Alternates2", sans-serif;
   color: var(--color-chart-axis);
-  font-size: var(--step--1);
+  font-size: 16px;
   margin-bottom: 5px;
   line-height: 1.4;
   hyphens: auto;
@@ -141,15 +113,15 @@ a:focus {
 
 @media screen and (max-width: 1400px) {
   .text-big {
-    font-size: var(--step-1);
+    font-size: 40px;
   }
 
   .text-medium {
-    font-size: var(--step-1);
+    font-size: 28px;
   }
 
   .text-small {
-    font-size: var(--step-0);
+    font-size: 18px;
   }
 }
 
@@ -177,11 +149,11 @@ a:focus {
   }
 
   .text-medium {
-    font-size: var(--step-1);
+    font-size: 30px;
   }
 
   .text-small {
-    font-size: var(--step-0);
+    font-size: 100px;
   }
 }
 
@@ -193,11 +165,11 @@ a:focus {
   }
 
   .text-medium {
-    font-size: var(--step-1);
+    font-size: 30px;
   }
 
   .text-small {
-    font-size: var(--step-0);
+    font-size: 50px;
   }
 }
 
@@ -209,11 +181,11 @@ a:focus {
   }
 
   .text-medium {
-    font-size: var(--step-1);
+    font-size: 30px;
   }
 
   .text-small {
-    font-size: var(--step-0);
+    font-size: 50px;
   }
 }
 
